Create dot files for main modules